tests/golden/type_errors/struct_method_builtin_conflict.cd
struct Bag { value: number }

impl Bag {
  fun len(): number { return this.value; }
}
